--- a/index.html
+++ b/index.html
@@ -6,10 +6,60 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Youtube Clone</title>
+  <link rel="stylesheet" href="https://unicons.iconscout.com/release/v4.0.0/css/line.css">
+  <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
-  <h1>Youtube Clone</h1>
+  <nav class="flex-div">
+    <div class="nav-left flex-div">
+      <i class="uil uil-list-ul menu-icon"></i>
+      <img src="/images/icons8-video-100.png" class="logo">
+    </div>
+    <div class="nav-middle flex-div">
+      <div class="search-box flex-div">
+        <input type="text" placeholder="Search">
+        <i class="uil uil-search"></i>
+      </div>
+      <i class="uil uil-microphone mic-icon"></i>
+    </div>
+    <div class="nav-right flex-div">
+      <i class="uil uil-upload"></i>
+      <i class="uil uil-apps"></i>
+      <i class="uil uil-bell"></i>
+      <img src="/images/jack.jpg" class="user-icon">
+    </div>
+  </nav>
+
+  <!-- sidebar -->
+  <div class="sidebar">
+    <div class="shortcut-links">
+      <a href="#"><i class="uil uil-home"></i>
+        <p>Home</p>
+      </a>
+      <a href="#"><i class="uil uil-compass"></i>
+        <p>Explore</p>
+      </a>
+      <a href="#"><i class="uil uil-plus-square"></i>
+        <p>Subscription</p>
+      </a>
+      <a href="#"><i class="uil uil-book"></i>
+        <p>Library</p>
+      </a>
+      <a href="#"><i class="uil uil-history"></i>
+        <p>History</p>
+      </a>
+      <a href="#"><i class="uil uil-play"></i>
+        <p>Playlist</p>
+      </a>
+      <a href="#"><i class="uil uil-envelope-add"></i>
+        <p>Message</p>
+      </a>
+      <a href="#"><i class="uil uil-plus-circle"></i>
+        <p>Show More</p>
+      </a>
+    </div>
+  </div>
 </body>
 
 </html>
