update main content

--- a/index.html
+++ b/index.html
@@ -58,8 +58,149 @@
       <a href="#"><i class="uil uil-plus-circle"></i>
         <p>Show More</p>
       </a>
+      <hr />
+    </div>
+    <div class="subscribed-list">
+      <h3>SUBSCRIBED</h3>
+      <a href=""><img src="/images/cameron.jpg" alt="">
+        <p>Jack Nelson</p>
+      </a>
+      <a href=""><img src="/images/gerard.jpg" alt="">
+        <p>Fillipen Nelson</p>
+      </a>
+      <a href=""><img src="/images/jack.jpg" alt="">
+        <p>Rudy Nelson</p>
+      </a>
+      <a href=""><img src="/images/megan.jpg" alt="">
+        <p>Salsa Nelson</p>
+      </a>
+      <a href=""><img src="/images/simon.jpg" alt="">
+        <p>Danny Nelson</p>
+      </a>
+      <a href=""><img src="/images/tom.jpg" alt="">
+        <p>Louise Nelson</p>
+      </a>
+      <a href=""><img src="/images/cameron.jpg" alt="">
+        <p>Camrron Nelson</p>
+      </a>
+    </div>
+  </div>
+
+  <!-- main content -->
+  <div class="container">
+    <div class="banner">
+      <img src="/images/banner.png" alt="">
+    </div>
+    <div class="list-container">
+      <div class="vid-list">
+        <a href=""><img src="/images/thumbnail1.png" class="thumbnail"></a>
+        <div class="flex-div">
+          <img src="/images/jack.png" alt="">
+          <div class="vid-info">
+            <a href="">Best Video to learn coding that help you to be a web developer</a>
+            <p>Easy Tutorials</p>
+            <p>15k Views 2 days</p>
+          </div>
+        </div>
+      </div>
+
+      <div class="vid-list">
+        <a href=""><img src="/images/thumbnail1.png" class="thumbnail"></a>
+        <div class="flex-div">
+          <img src="/images/jack.png" alt="">
+          <div class="vid-info">
+            <a href="">Best Video to learn coding that help you to be a web developer</a>
+            <p>Easy Tutorials</p>
+            <p>15k Views 2 days</p>
+          </div>
+        </div>
+      </div>
+
+      <div class="vid-list">
+        <a href=""><img src="/images/thumbnail1.png" class="thumbnail"></a>
+        <div class="flex-div">
+          <img src="/images/jack.png" alt="">
+          <div class="vid-info">
+            <a href="">Best Video to learn coding that help you to be a web developer</a>
+            <p>Easy Tutorials</p>
+            <p>15k Views 2 days</p>
+          </div>
+        </div>
+      </div>
+
+      <div class="vid-list">
+        <a href=""><img src="/images/thumbnail1.png" class="thumbnail"></a>
+        <div class="flex-div">
+          <img src="/images/jack.png" alt="">
+          <div class="vid-info">
+            <a href="">Best Video to learn coding that help you to be a web developer</a>
+            <p>Easy Tutorials</p>
+            <p>15k Views 2 days</p>
+          </div>
+        </div>
+      </div>
+
+      <div class="vid-list">
+        <a href=""><img src="/images/thumbnail1.png" class="thumbnail"></a>
+        <div class="flex-div">
+          <img src="/images/jack.png" alt="">
+          <div class="vid-info">
+            <a href="">Best Video to learn coding that help you to be a web developer</a>
+            <p>Easy Tutorials</p>
+            <p>15k Views 2 days</p>
+          </div>
+        </div>
+      </div>
+
+      <div class="vid-list">
+        <a href=""><img src="/images/thumbnail1.png" class="thumbnail"></a>
+        <div class="flex-div">
+          <img src="/images/jack.png" alt="">
+          <div class="vid-info">
+            <a href="">Best Video to learn coding that help you to be a web developer</a>
+            <p>Easy Tutorials</p>
+            <p>15k Views 2 days</p>
+          </div>
+        </div>
+      </div>
+      <div class="vid-list">
+        <a href=""><img src="/images/thumbnail1.png" class="thumbnail"></a>
+        <div class="flex-div">
+          <img src="/images/jack.png" alt="">
+          <div class="vid-info">
+            <a href="">Best Video to learn coding that help you to be a web developer</a>
+            <p>Easy Tutorials</p>
+            <p>15k Views 2 days</p>
+          </div>
+        </div>
+      </div>
+      <div class="vid-list">
+        <a href=""><img src="/images/thumbnail1.png" class="thumbnail"></a>
+        <div class="flex-div">
+          <img src="/images/jack.png" alt="">
+          <div class="vid-info">
+            <a href="">Best Video to learn coding that help you to be a web developer</a>
+            <p>Easy Tutorials</p>
+            <p>15k Views 2 days</p>
+          </div>
+        </div>
+      </div>
+      <div class="vid-list">
+        <a href=""><img src="/images/thumbnail1.png" class="thumbnail"></a>
+        <div class="flex-div">
+          <img src="/images/jack.png" alt="">
+          <div class="vid-info">
+            <a href="">Best Video to learn coding that help you to be a web developer</a>
+            <p>Easy Tutorials</p>
+            <p>15k Views 2 days</p>
+          </div>
+        </div>
+      </div>
+
     </div>
   </div>
 </body>
+
+<script src="/script.js"></script>
 
 </html>
