--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
     </div>
     <div class="list-container">
       <div class="vid-list">
-        <a href=""><img src="/images/thumbnail1.png" class="thumbnail"></a>
+        <a href="play-video.html"><img src="/images/thumbnail1.png" class="thumbnail"></a>
         <div class="flex-div">
           <img src="/images/jack.png" alt="">
           <div class="vid-info">
@@ -105,7 +105,7 @@
       </div>
 
       <div class="vid-list">
-        <a href=""><img src="/images/thumbnail1.png" class="thumbnail"></a>
+        <a href="play-video.html"><img src="/images/thumbnail1.png" class="thumbnail"></a>
         <div class="flex-div">
           <img src="/images/jack.png" alt="">
           <div class="vid-info">
@@ -117,7 +117,7 @@
       </div>
 
       <div class="vid-list">
-        <a href=""><img src="/images/thumbnail1.png" class="thumbnail"></a>
+        <a href="play-video.html"><img src="/images/thumbnail1.png" class="thumbnail"></a>
         <div class="flex-div">
           <img src="/images/jack.png" alt="">
           <div class="vid-info">
@@ -129,7 +129,7 @@
       </div>
 
       <div class="vid-list">
-        <a href=""><img src="/images/thumbnail1.png" class="thumbnail"></a>
+        <a href="play-video.html"><img src="/images/thumbnail1.png" class="thumbnail"></a>
         <div class="flex-div">
           <img src="/images/jack.png" alt="">
           <div class="vid-info">
@@ -141,7 +141,7 @@
       </div>
 
       <div class="vid-list">
-        <a href=""><img src="/images/thumbnail1.png" class="thumbnail"></a>
+        <a href="play-video.html"><img src="/images/thumbnail1.png" class="thumbnail"></a>
         <div class="flex-div">
           <img src="/images/jack.png" alt="">
           <div class="vid-info">
@@ -153,7 +153,7 @@
       </div>
 
       <div class="vid-list">
-        <a href=""><img src="/images/thumbnail1.png" class="thumbnail"></a>
+        <a href="play-video.html"><img src="/images/thumbnail1.png" class="thumbnail"></a>
         <div class="flex-div">
           <img src="/images/jack.png" alt="">
           <div class="vid-info">
@@ -164,7 +164,7 @@
         </div>
       </div>
       <div class="vid-list">
-        <a href=""><img src="/images/thumbnail1.png" class="thumbnail"></a>
+        <a href="play-video.html"><img src="/images/thumbnail1.png" class="thumbnail"></a>
         <div class="flex-div">
           <img src="/images/jack.png" alt="">
           <div class="vid-info">
@@ -175,7 +175,7 @@
         </div>
       </div>
       <div class="vid-list">
-        <a href=""><img src="/images/thumbnail1.png" class="thumbnail"></a>
+        <a href="play-video.html"><img src="/images/thumbnail1.png" class="thumbnail"></a>
         <div class="flex-div">
           <img src="/images/jack.png" alt="">
           <div class="vid-info">
@@ -186,7 +186,7 @@
         </div>
       </div>
       <div class="vid-list">
-        <a href=""><img src="/images/thumbnail1.png" class="thumbnail"></a>
+        <a href="play-video.html"><img src="/images/thumbnail1.png" class="thumbnail"></a>
         <div class="flex-div">
           <img src="/images/jack.png" alt="">
           <div class="vid-info">
