update side menu play video

--- a/play-video.html
+++ b/play-video.html
@@ -29,7 +29,83 @@
       <img src="/images/jack.jpg" class="user-icon">
     </div>
   </nav>
+  <div class="container play-container">
+    <div class="row">
+      <div class="play-video">
+        <video controls autoplay>
+          <source src="/images/video.mp4" type="video/mp4">
+        </video>
+      </div>
+      <div class="right-sidebar">
 
+        <div class="side-video-list">
+          <a class="small-thumbnail" href="play-video.html"><img src="/images/thumbnail1.png"></a>
+          <div class="vid-info">
+            <a href="">Lorem ipsum dolor sit. Lorem ipsum dolor sit.</a>
+            <p>Lorem, ipsum dolor.</p>
+            <p>14k views</p>
+          </div>
+        </div>
+        <div class="side-video-list">
+          <a class="small-thumbnail" href="play-video.html"><img src="/images/thumbnail2.png"></a>
+          <div class="vid-info">
+            <a href="">Lorem ipsum dolor sit. Lorem ipsum dolor sit.</a>
+            <p>Lorem, ipsum dolor.</p>
+            <p>14k views</p>
+          </div>
+        </div>
+        <div class="side-video-list">
+          <a class="small-thumbnail" href="play-video.html"><img src="/images/thumbnail3.png"></a>
+          <div class="vid-info">
+            <a href="">Lorem ipsum dolor sit. Lorem ipsum dolor sit.</a>
+            <p>Lorem, ipsum dolor.</p>
+            <p>14k views</p>
+          </div>
+        </div>
+        <div class="side-video-list">
+          <a class="small-thumbnail" href="play-video.html"><img src="/images/thumbnail4.png"></a>
+          <div class="vid-info">
+            <a href="">Lorem ipsum dolor sit. Lorem ipsum dolor sit.</a>
+            <p>Lorem, ipsum dolor.</p>
+            <p>14k views</p>
+          </div>
+        </div>
+        <div class="side-video-list">
+          <a class="small-thumbnail" href="play-video.html"><img src="/images/thumbnail5.png"></a>
+          <div class="vid-info">
+            <a href="">Lorem ipsum dolor sit. Lorem ipsum dolor sit.</a>
+            <p>Lorem, ipsum dolor.</p>
+            <p>14k views</p>
+          </div>
+        </div>
+        <div class="side-video-list">
+          <a class="small-thumbnail" href="play-video.html"><img src="/images/thumbnail6.png"></a>
+          <div class="vid-info">
+            <a href="">Lorem ipsum dolor sit. Lorem ipsum dolor sit.</a>
+            <p>Lorem, ipsum dolor.</p>
+            <p>14k views</p>
+          </div>
+        </div>
+        <div class="side-video-list">
+          <a class="small-thumbnail" href="play-video.html"><img src="/images/thumbnail7.png"></a>
+          <div class="vid-info">
+            <a href="">Lorem ipsum dolor sit. Lorem ipsum dolor sit.</a>
+            <p>Lorem, ipsum dolor.</p>
+            <p>14k views</p>
+          </div>
+        </div>
+        <div class="side-video-list">
+          <a class="small-thumbnail" href="play-video.html"><img src="/images/thumbnail8.png"></a>
+          <div class="vid-info">
+            <a href="">Lorem ipsum dolor sit. Lorem ipsum dolor sit.</a>
+            <p>Lorem, ipsum dolor.</p>
+            <p>14k views</p>
+          </div>
+        </div>
+
+      </div>
+    </div>
+  </div>
 </body>
 <script src="script.js"></script>
 
