update play video

--- a/play-video.html
+++ b/play-video.html
@@ -35,6 +35,89 @@
         <video controls autoplay>
           <source src="/images/video.mp4" type="video/mp4">
         </video>
+        <div class="tags">
+          <a href=""> #Coding</a>
+          <a href=""> #HTML</a>
+          <a href=""> #CSS</a>
+          <a href=""> #Javascript</a>
+        </div>
+        <h3>Best Youtube Channel To Learn Video</h3>
+        <div class="play-video-info">
+          <p>1.2k views &bull; 2 days ago</p>
+          <div>
+            <a href=""><img src="images/like.png">124</a>
+            <a href=""><img src="images/dislike.png">24</a>
+            <a href=""><img src="images/share.png">share</a>
+            <a href=""><img src="images/save.png">save</a>
+          </div>
+        </div>
+        <hr>
+        <div class="publisher">
+          <img src="/images/Jack.png">
+          <div>
+            <p>Easy Tutorials</p>
+            <span>500k Subscribers</span>
+          </div>
+          <button type="button">Subscribe</button>
+        </div>
+        <div class="vid-description">
+          <p>Channel that makes learning easy</p>
+          <p>Subscribe Easy Tutorial Lorem, ipsum dolor sit amet consectetur adipisicing elit. Fugiat!</p>
+          <hr>
+          <h4>135 Comments</h4>
+          <div class="add-comment">
+            <img src="/images/Jack.png">
+            <input type="text" placeholder="Write comments...">
+          </div>
+          <div class="old-comment">
+            <img src="/images/Jack.png">
+            <div>
+              <h3>Jack Norena <span>2 days ago</span></h3>
+              <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellat doloremque odit dicta ex delectus in
+                sequi dolor fuga ratione numquam.</p>
+              <div class="acomment-action">
+                <img src="images/like.png">
+                <span>244</span>
+                <img src="/images/dislike.png">
+                <span>2</span>
+                <span>Reply</span>
+                <a href="">All Replies</a>
+              </div>
+            </div>
+          </div>
+          <div class="old-comment">
+            <img src="/images/Jack.png">
+            <div>
+              <h3>Jack Norena <span>2 days ago</span></h3>
+              <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellat doloremque odit dicta ex delectus in
+                sequi dolor fuga ratione numquam.</p>
+              <div class="acomment-action">
+                <img src="images/like.png">
+                <span>244</span>
+                <img src="/images/dislike.png">
+                <span>2</span>
+                <span>Reply</span>
+                <a href="">All Replies</a>
+              </div>
+            </div>
+          </div>
+          <div class="old-comment">
+            <img src="/images/Jack.png">
+            <div>
+              <h3>Jack Norena <span>2 days ago</span></h3>
+              <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellat doloremque odit dicta ex delectus in
+                sequi dolor fuga ratione numquam.</p>
+              <div class="acomment-action">
+                <img src="images/like.png">
+                <span>244</span>
+                <img src="/images/dislike.png">
+                <span>2</span>
+                <span>Reply</span>
+                <a href="">All Replies</a>
+              </div>
+            </div>
+          </div>
+        </div>
       </div>
       <div class="right-sidebar">
 
